# kafka-tools

./: CMakeLists.txt  Dockerfile  Dockerfile.build  LICENSE  README.md  build.sh
.github/workflows/: ci.yml
docs/doxygen/: Doxyfile
examples/: CMakeLists.txt
examples/kafka-producer/: CMakeLists.txt  main.cpp
examples/producer/: CMakeLists.txt  main.cpp
examples/udp-server-kafka-producer/: CMakeLists.txt  main.cpp
